2016-10-26  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (windowResized): update OIS mouse metrics.
	* src/client/GameEngine.hpp (GameEngine): add windowResized declaration.

	* src/client/GameEngine.cpp (~GameEngine): now delete root.
	* src/client/GameEngine.cpp (~GameEngine): remove itself ad a
	windowEventListener.
	* src/client/GameEngine.cpp (frameRenderingQueued): check for shutdown
	or losed window before capturing OIS devices.

2016-10-25  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (run): implement the version-revision
	geometry buffer (CEGUI overlay).
	* src/client/GameEngine.hpp (GameEngine): add mVersionGeometry member
	pointer.
	* config.h.in: add VERSTRING macro.

	* media/layouts/logo.scheme: remove unneeded file.
	* media/imagesets/logo.imageset: remove unneeded file.

2016-10-23  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (overlayHandler): implement and draw
	a CEGUI overlay for the logo.
	* src/client/GameEngine.cpp (~GameEngine): implement destructor.
	* media/logo.png: moved and renamed to media/imagesets/rpglogo.png.
	* src/client/resources.cfg.in (imagesets): add ../media/imagesets.
	* media/layouts/logo.imageset: now specify version 2 in imageset.

2016-10-22  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (run): try to add the previous layout but
	something's wrong.
	* media/layouts/logo.*: add an imageset, a layout and a scheme file.
	* media/logo.png: add a logo.

2016-10-21  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/main.cpp (main): use running() to exit before calling
	run().
	* src/client/GameEngine.cpp (running): implement getter function.
	* src/client/GameEngine.hpp (running): add running() declaration.

2016-10-20  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (Exit_OnClick): make the main menu's exit
	button exit the game.
	* src/client/GameEngine.hpp (GameEngine): add Exit_OnClick declaration.
